<resources>
    <string name="app_name">Lesson_1</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_point">.</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_mul">*</string>
    <string name="button_div">/</string>
    <string name="button_clear">C</string>
    <string name="button_del">backspase</string>
    <string name="button_res">=</string>
    <string name="button_setting">settings</string>
    <string name="dark_theme">dark</string>
    <string name="funny_theme">funny</string>
    <string name="lesson1_theme">standart</string>


</resources>