<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">


    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonFunny"
            android:text="@string/funny_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDark"
            android:text="@string/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLesson1"
            android:text="@string/lesson1_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>






</androidx.appcompat.widget.LinearLayoutCompat>